# picowota

./: .cmake-format.yaml  CMakeLists.txt  README.md  bootloader_shell.ld  btstack_config.h  comm_bt_spp.c  comm_bt_spp.h  comm_stream.c  comm_stream.h  comm_tcp.c  comm_tcp.h  comm_usb_cdc.c  comm_usb_cdc.h  gen_imghdr.py  main.c  memmap_default_with_app_store.ld  standalone.ld  stdio_usb.c  tcp_comm.c  tcp_comm.h  tusb_config.h  usb_descriptors.c
dhcpserver/: dhcpserver.c  dhcpserver.h
picowota_client/: CMakeLists.txt  btstack_storage.c  reboot.c
picowota_client/include/picowota/: reboot.h
picowota_reboot/include/picowota/: reboot.h
